force-app/main/default/objects/zkmulti__OtherSetting__c/fields/zkmulti__NumberValue__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__NumberValue__c</fullName>
    <label>Number Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>